--- a/express-generator/myapp/views/article/article-add.ejs
+++ b/express-generator/myapp/views/article/article-add.ejs
@@ -28,7 +28,17 @@
                
                     <li><label>职位名称<b>*</b></label><input name="" type="text" class="dfinput" value="请填写单位名称"  style="width:518px;"/></li>
     
-                    <li><label>薪资待遇<b>*</b></label><input name="" type="text" class="dfinput" value="请填写单位名称"  style="width:518px;"/></li>
+                    <li><label>文章标签<b>*</b></label>
+                        
+                        <div class="addtiplist">
+                            <ul>
+                                <li><input name="" type="checkbox" value="" checked="checked"/><span>前端</span></li>
+                                <li><input name="" type="checkbox" value=""/><span>Node.js</span></li>
+                                <li><input name="" type="checkbox" value=""/><span>Javascript</span></li>
+                            </ul> 
+                        </div>
+                        
+                    </li>
                     <li><label style="float: none;">通知内容<b>*</b></label>
     
 
