--- a/express-generator/myapp/views/template/left.ejs
+++ b/express-generator/myapp/views/template/left.ejs
@@ -10,6 +10,7 @@
     	<ul class="menuson">
             <li class="active"><cite></cite><a href="/main">首页信息</a><i></i></li>
             <li><cite></cite><a href="/article/article-list">文章设置</a><i></i></li>   
+            <li><cite></cite><a href="/main/tip">标签设置</a><i></i></li>   
             <li><cite></cite><a href="/users/admin-list">管理员设置</a><i></i></li>  
         </ul>  
     </dd>
